# RM3_gazebo

./: CMakeLists.txt  README.MD  package.xml
RM3_gazebo/: CMakeLists.txt  package.xml
RM3_gazebo/config/: plotjuggler_template.xml  screw_controller.yaml  simulation_parameters.yaml
RM3_gazebo/config/Rviz/: rm3_robot.rviz
RM3_gazebo/launch/: RM3_RTABMAP.launch.py  spawn_RM3.launch.py
RM3_gazebo/models/cave/: model.sdf
RM3_gazebo/models/terrain/: model.sdf
RM3_gazebo/scripts/: motor_to_body_vel.py  whisker_state_publisher.py  whisker_state_visualizer.py
RM3_gazebo/urdf/: RM3_robot.xacro.urdf  screw_snippets.xacro  sensors.xacro  sensors_laser.xacro  whisker_snippets.xacro
RM3_gazebo/urdf/meshes/: electronics_box.dae  halfWheel.dae  realsense.dae  screw_ccw.dae  screw_cw.dae  whisker_array.dae
RM3_gazebo/worlds/: boxes_world.world  cave_world.world  empty_world.world  terrain_world.world
config/Rviz/: rm3_robot.rviz  rm3_robot_whisker_and_camera.rviz
launch/: RM3_RTABMAP.launch.py  record_cave.launch.py
models/box/: model.config  model.sdf
models/cave/: model.sdf
models/terrain/: model.config  model.sdf
robominer_description/: CMakeLists.txt  model.config  package.xml
robominer_description/launch/: description.launch.py
robominer_gazebo/: CMakeLists.txt  package.xml
scripts/: follow_right_wall.py  motor_to_body_vel.py  whisker_state_publisher.py
src/: test_drive.cpp
urdf/: RM3_robot.xacro.urdf  screw_snippets.xacro  whisker_snippets.xacro
urdf/meshes/: wheel.dae  (+2 more)
worlds/: boxes_world.world  cave_world.world  terrain_world.world
(+15 files in other folders)
